welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:2: error: method run overrides nothing.
Note: the super classes of class MethodsPicture contain the following, non final members named run:
def run(): Unit
override def run(c:Color) {
             ^