welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run(c:Color) {
	def motif3(){
		def motif(){
		def marque(){
		baisseBrosse()
		leveBrosse()
	}
	def faireV(c:Color){
		avance()
		setCouleurBrosse(Color.YELLOW)
		marque()
		avance()
		gauche()
		avance()
		marque()
		recule()
		droite()
		avance()
		marque()
		avance()
		gauche()
	}
	for (i <- 1 to 4){
		faireV(Color.YELLOW)
	}
	}
	for (i <- 1 to 3){
		motif()
		avance(5)
	}
	gauche()
	avance(5)
	droite()
	}
	for (i <- 1 to 3){
		motif3()
	}
}
